@@ -89,6 +89,7 @@ kw = {'name': "pyscard",
       'url': "https://github.com/LudovicRousseau/pyscard",
       'long_description': 'Smartcard package for Python',
       'platforms': ['linux', 'win32'],
+      'python_requires': '>=3.9',
       'packages': ["smartcard",
                    "smartcard.pcsc",
                    "smartcard.pyro",
@@ -134,15 +135,10 @@ kw = {'name': "pyscard",
           'Operating System :: Unix',
           'Operating System :: Microsoft :: Windows',
           'Operating System :: MacOS :: MacOS X',
-          'Programming Language :: Python :: 3.3',
-          'Programming Language :: Python :: 3.4',
-          'Programming Language :: Python :: 3.5',
-          'Programming Language :: Python :: 3.6',
-          'Programming Language :: Python :: 3.7',
-          'Programming Language :: Python :: 3.8',
           'Programming Language :: Python :: 3.9',
           'Programming Language :: Python :: 3.10',
           'Programming Language :: Python :: 3.11',
+          'Programming Language :: Python :: 3.12',
           'Topic :: Security',
           ]
       }
