@@ -1,8 +1,11 @@
 [tox]
 envlist =
     pylint
-    py311
-    py312
+    py3.9
+    py3.10
+    py3.11
+    py3.12
+skip_missing_interpreters = True
 
 [testenv]
 deps =
