@@ -2,6 +2,7 @@ Unreleased changes
 ==================
    * Remove Python 2 conditional code
    * Migrate a `src/` layout.
+   * Support only Python 3.9 and higher
 
 2.1.1 (September 2024)
 ======================
